修正手势识别初始化错误

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_compile_options(-ffunction-sections -fdata-sections -fno-common -fmessage-le
 
 # uncomment to mitigate c++17 absolute addresses warnings
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-register")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
 
 # Enable assembler files preprocessing
 add_compile_options($<$<COMPILE_LANGUAGE:ASM>:-x$<SEMICOLON>assembler-with-cpp>)
@@ -66,6 +67,7 @@ include_directories(
         Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F
         Flash
         Bsp
+        PAJ7620
         PAJ7620U2
         UserApp)
 
@@ -79,6 +81,7 @@ file(GLOB_RECURSE SOURCES
         "Core/*.*"
         "Flash/*.*"
         "Bsp/*.*"
+        "PAJ7620/*.*"
         "PAJ7620U2/*.*"
         "UserApp/*.*")
 
