舵机参数配置协议走UART，uart收发正常

--- a/stlink.cfg
+++ b/stlink.cfg
@@ -6,4 +6,5 @@ transport select hla_swd
 source [find target/stm32f4x.cfg]
 
 # download speed = 10MHz
-adapter speed 10000
+#adapter speed 10000
+adapter speed 4000
